# GameDevNights

./: .gitignore  .gitmodules
game/: .gitignore  CMakeLists.txt  README  globals.h  main.cpp
game/cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
game/engine/2d_map/include/: Map.h  MapLayer.h  MapObjectGroupLayer.h  MapTileSet.h  MapTiledLayer.h
game/engine/2d_map/src/: Map.cpp  MapLayer.cpp  MapTileSet.cpp  MapTiledLayer.cpp
game/engine/2d_sprites/include/: Animation.h  AnimationFrame.h  Frame.h  FramesStore.h  Sprite.h
game/engine/2d_sprites/src/: Animation.cpp  AnimationFrame.cpp  Frame.cpp  FramesStore.cpp  Sprite.cpp
game/engine/core/include/: AnimationFrame.h  EventsManager.h  Graphics.h  Sprite.h  Utils.hpp
game/engine/core/src/: Animation.cpp  AnimationFrame.cpp  EventsManager.cpp  Frame.cpp  FramesStore.cpp  Graphics.cpp  Sprite.cpp
game/engine/entities/include/: Entity.h
game/engine/entities/src/: Entity.cpp
game/engine/include/: Animation.h  EventsManager.h  FramesStore.h  Game.h  Graphics.h  Input.h  InputController.h  Joystick.h  Keyboard.h  Sprite.h
game/engine/input/include/: InputController.h  Joystick.h
game/engine/input/src/: InputController.cpp  Joystick.cpp  Keyboard.cpp
game/engine/src/: Animation.cpp  AnimationFrame.cpp  EventsManager.cpp  Frame.cpp  Game.cpp  Graphics.cpp  Input.cpp  InputController.cpp  Joystick.cpp  Keyboard.cpp  Sprite.cpp
game/game/: Game.cpp  Game.h  Player.cpp  Player.h
game/game/entities/: Person.cpp  Person.h
game/game/include/: Game.h  Player.h
game/game/physics/: ContactListener.cpp  ContactListener.h  FixtureUserData.h  SDL2DebugDraw.cpp  SDL2DebugDraw.h  World.cpp  World.h
game/game/player/: Player.cpp  Player.h  PlayerStates.cpp  PlayerStates.h
game/game/src/: Game.cpp  Player.cpp
game/resources/maps/: test.json
game/resources/sprites/Hero/: hero_test.autosave.scml  hero_test.scon  player.autosave.scml  test_spriter.autosave.scml  test_spriter.scml  test_spriter.scon  testa.autosave.scml  testa.scon
game/resources/sprites/cody/: sprites.json
game/resources/sprites/drako/: drako.json
game/source/: Frame.h  FramesStore.cpp  FramesStore.h  game.cpp  game.h  graphics.cpp  input.h
game/third_parties/json/: json.hpp
